adding ico into the repository

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Index</title>
-  <link rel="icon" href="C:\Users\abc\Desktop\icon.ico">
+  <link rel="icon" href="icon.ico">
   <link rel="stylesheet" href="css\stylesheet.css" type="text/css" charset="utf-8" />
 
 
