--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </head>
 <body background="bg.png">
   <h1>Logbook</h1>
-
-  <div class="polaroid">
-    <img src="https://s3.amazonaws.com/prod-media.gameinformer.com/styles/full/s3/2019/03/12/8dc841d7/onepieceworldseeker.jpg" alt="RPG Math" style="width:100%" id="img0">
-    <div class="container">
-    </div>
+  <hr style="width:50%;text-align:left;margin-left:25%">
+  <div>
+      <a href="cipher.html">
+      <p><a href="cipher.html">Cipher</a><p>
   </div>
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
